Bug 1201937 - push transform onto cairo context when evaluating path bounds. r=eihrul